# plansys2-hospital-k-bots

./: CMakeLists.txt  README.md  comandos  commands  package.xml
hospital_navigation/: CMakeLists.txt  package.xml
hospital_navigation/launch/: tiago_navigation.launch.py
hospital_navigation/maps/: hospital_map.yaml  mapa_hospital.pgm  mapa_hospital.yaml  old_hospital_map.yaml
hospital_navigation/params/: tiago_nav_params.yaml
hospital_navigation/rqt_conf/: plansys2.perspective
hospital_navigation/rviz_conf/: configuracion.rviz
launch/: plansys2_bt_launch.py  plansys2_simple_example_launch.py
maps/: hospital_map.pgm  hospital_map.yaml
pddl/: hospital_domain.pddl  hospital_problem.pddl
plansys2_hospital/: CMakeLists.txt
plansys2_hospital/launch/: plansys2_bt_launch.py  plansys2_hospital_launch.py  simulation_launch.py
plansys2_hospital/params/: locations.yaml
plansys2_hospital/src/: close_door_action_node.cpp  drop_object_action_node.cpp  hospital_controller_node.cpp  move_action_node.cpp  open_door_action_node.cpp  patrolling_controller_node.cpp  pick_object_action_node.cpp
plansys2_hospital/src/behavior_tree_nodes/: Move.cpp
src/: drop_object.cpp  move_directly_action_node.cpp  move_through_action_node.cpp  open_door_action.cpp  patrolling_controller_node.cpp  pick_object_action_node.cpp
src/behavior_tree_nodes/: Move.cpp
